--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 @charset "UTF-08";
 @import url('https://fonts.googleapis.com/css2?family=Vollkorn&display=swap');
 
+:root {
+    --BrancoFundo:#FAFBFC;
+    --BrancoDiv:#FFFFFF;
+    --RoxoEscuro: #8946EE;
+    --RoxoClaro: #AF7CFB;
+
+    --FontePrincipal: 'Vollkorn', serif;
+}
 
 body {
     margin: 0;
@@ -13,7 +21,7 @@ p, a {
 
 #content {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 3fr 1fr;
     grid-template-areas:
     "nav nav nav"
     "aside1 section aside2"
@@ -24,10 +32,10 @@ p, a {
 
 nav {
     grid-area: nav;
-    height: 80px;
+    height: 100px;
     display: flex;
     justify-content: space-between;
-    background-image: linear-gradient(90deg, #8946EE, #AF7CFB );
+    background-image: linear-gradient(90deg, var(--RoxoEscuro), var(--RoxoClaro) );
 }
 
 nav img {
@@ -64,25 +72,108 @@ nav a {
     margin: 0;
     padding: 0;
     text-decoration: none;
-    color: white;
+    color: var(--BrancoFundo);
 }
 
 #aside1 {
     grid-area: aside1;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--BrancoFundo);
+}
 
+#aside1 div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 10px auto 10px auto;
+    width: 40%;
+    padding: 15px;
+    background-color: var(--BrancoDiv);
+    box-shadow:0.5px 0.5px 10px rgba(0, 0, 0, 0.202);
 }
 
 section {
     grid-area: section;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 
+    grid-template-areas:
+    "sec01 sec02"
+    "sec03 sec03"
+    "sec04 sec05"
+    "sec06 sec06"
+    "sec07 sec08"
+    "sec09 sec09"
+    ;
+}
+
+#sec01 {
+    padding-top: 10px;
+    grid-area: sec01;
+}
+
+#sec01 > h1 {
+    font-family: var(--FontePrincipal);
+    font-size: 60px;
+    color: var(--RoxoClaro);
+    margin: 0;
+    line-height: 1em;
+}
+
+#sec01 > p {
+    margin: 0;
+    font-family: var(--FontePrincipal);
+    font-size: 14px;
+    color: var(--RoxoClaro);
+}
+
+#sec02 {
+    grid-area: sec02;
+    display: flex;
+
+}
+
+.sec02div > div {
+    margin-left: 20px;
+}
+
+#sec03 {
+    grid-area: sec03;
+}
+
+#sec04 {
+    grid-area: sec04;
+}
+
+#sec05 {
+    grid-area: sec05;
+}
+
+#sec06 {
+    grid-area: sec06;
+}
+
+#sec07 {
+    grid-area: sec07;
+}
+
+#sec08 {
+    grid-area: sec08;
+}
+
+#sec09 {
+    grid-area: sec09; 
 }
 
 #aside2 {
     grid-area: aside2;
+    background-color: aquamarine;
 
 }
 
 footer {
     grid-area: footer;
+    background-color: bisque;
 
 }
