--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 p, a {
     font-family: 'Vollkorn', serif;
-    font-size: 20px;
+    font-size: 18px;
 
 }
 
@@ -30,7 +30,7 @@ p, a {
     grid-template-areas:
     "nav nav"
     "aside1 section"
-    "aside2 aside2"
+    "aside1 aside2"
     "footer footer "
     ;
 
@@ -106,6 +106,7 @@ section {
     grid-area: section;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-right: 20px;
 
     grid-template-areas:
     "sec01 sec02"
@@ -179,6 +180,10 @@ section {
 
 #sec04 {
     grid-area: sec04;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
 #sec04 img {
@@ -187,11 +192,13 @@ section {
 
 #sec05 {
     grid-area: sec05;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 }
 
 #sec05pm {
-    margin-bottom: 55px;
     width: 60%;
     color: #8946EE;
     font-size: 14px;
@@ -203,7 +210,7 @@ section {
 }
 
 #sec06 {
-    height: 80px;
+    min-height: 80px;
     padding: 20px 40px 10px 40px;
     text-align: center;
 
@@ -238,20 +245,43 @@ section {
 
 #sec08 {
     grid-area: sec08;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0;
+    font-size: 18px;
 }
 
 #sec09 {
     grid-area: sec09; 
 }
 
+#sec09 img {
+    width: 100%;
+}
+
 #aside2 {
     grid-area: aside2;
-    background-color: aquamarine;
+    display: flex;
+    justify-content: space-between;
+    max-width: 900px;
 
+}
+
+#aside2 img {
+   
+    margin-top: 20px;
+    margin-right: 20px;
+    width: 40%;
+    display: wrap;
 }
 
 footer {
     grid-area: footer;
-    background-color: bisque;
+    background-image: linear-gradient(90deg, var(--RoxoEscuro), var(--RoxoClaro));
+    height: 80px;
+    padding-top: 15px;
+    text-align: center;
+    color: var(--BrancoDiv);
 
 }
