--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ nav {
     display: flex;
     justify-content: space-between;
     background-image: linear-gradient(90deg, var(--RoxoEscuro), var(--RoxoClaro) );
+    flex-wrap: wrap;
 }
 
 nav img {
@@ -123,44 +124,22 @@ nav a {
     display: flex;
     flex-direction: row;
     background-color: var(--BrancoFundo);
-    overflow-x: auto;
+    overflow-x: scroll;
 
 }
 
 #aside1 div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
     margin: 10px auto 10px auto;
     width: 30%;
     padding: 15px;
     background-color: var(--BrancoDiv);
     box-shadow:0.5px 0.5px 10px rgba(0, 0, 0, 0.202);
-    margin: 0 10px 0 10px;
-
-
 }
 
 @media screen and (min-width: 600px) {
     #aside1 {
-        grid-area: aside1;
-        display: flex;
         flex-direction: column;
-        background-color: var(--BrancoFundo);
     }
-    
-    #aside1 div {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        margin: 10px auto 10px auto;
-        width: 30%;
-        padding: 15px;
-        background-color: var(--BrancoDiv);
-        box-shadow:0.5px 0.5px 10px rgba(0, 0, 0, 0.202);
-        
-    }
-
 }
 
 
