--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ nav a {
     display: flex;
     flex-direction: row;
     background-color: var(--BrancoFundo);
-    overflow-x: scroll;
+
 
 }
 
@@ -313,6 +313,12 @@ section {
 @media screen and (min-width: 600px) {
     #aside2 {
         flex-direction: row;
+    }
+
+    #aside2 img {
+
+        width: 40%;
+
     }
 }
 
