--- a/style.css
+++ b/style.css
@@ -115,13 +115,14 @@ nav a {
     display: flex;
     flex-direction: row;
     background-color: var(--BrancoFundo);
+    flex-wrap: wrap;
 
 
 }
 
 #aside1 div {
-    margin: auto 10px auto 10px;
-    width: 30%;
+    margin: 10px;
+    width: 10vw;
     padding: 15px;
     background-color: var(--BrancoDiv);
     box-shadow:0.5px 0.5px 10px rgba(0, 0, 0, 0.202);
@@ -129,8 +130,13 @@ nav a {
 
 @media screen and (min-width: 600px) {
     #aside1 {
-        margin: 10px auto 10px auto;
+        
         flex-direction: column;
+    }
+
+    #aside1 div {
+        width: 30%;
+        margin: 10px auto 10px auto;
     }
 }
 
