--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ section {
 
     grid-gap: 20px;
     background-color: var(--BrancoDiv);
+    margin: 10px;
 
 }
 
@@ -348,11 +349,16 @@ section {
 
 
 footer {
+    
     grid-area: footer;
     background-image: linear-gradient(90deg, var(--RoxoEscuro), var(--RoxoClaro));
     min-height: 80px;
-    padding-top: 15px;
+    padding: 20px;
     text-align: center;
     color: var(--BrancoDiv);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
 
 }
